# gazebo_simulator_origin

./: sim.sh  viewReferee.sh  zstart.sh
src/: log.txt
src/bringup/launch/: mapping.launch.py  startup.launch.py  tf.launch.py
src/bringup/map/: 1.txt  rmuc_2025.yaml  rmuc_2025_normalized.pgm
src/bringup/params/: nav2_params.yaml
src/bringup/rviz/: nav2_default_view.rviz
src/dec_tree/config/: rmuc.yaml
src/gui_plugins/: CMakeLists.txt  package.xml
src/gui_plugins/env-hooks/: gazebo.dsv.in
src/gui_plugins/plugins/race_control/: RaceControl.cc  RaceControl.hh  RaceControl.qml  racecontrol.qrc
src/gui_plugins/plugins/referee_ui/: RefereeUI.cc  RefereeUI.hh  RefereeUI.qml  referee.qrc
src/localization/Point-LIO-grid_map_ros2/config/: velody16.yaml
src/localization/Point-LIO-grid_map_ros2/launch/: point_lio.launch.py
src/localization/icp_registration/config/: icp.yaml
src/navigation/fake_baselink/launch/: fake_baselink.launch.py
src/navigation/local_costmap_visualizer/: package.xml  setup.cfg  setup.py
src/navigation/local_costmap_visualizer/local_costmap_visualizer/: local_costmap_visualizer.py
src/navigation/nav/launch/: navigation_launch.py
src/navigation/potential_escape_nav_plugin/potential_escape/include/potential_escape/: potential_escape.hpp
src/navigation/potential_escape_nav_plugin/potential_escape/src/: potential_escape.cpp
src/navigation/potential_escape_nav_plugin/potential_escape_action/src/: potential_escape_action.cpp
src/pb2025_robot_description/launch/: robot_description_launch.py
src/pb2025_robot_description/resource/models/mid360/: model.config  model.sdf  model.sdf.xmacro
src/pb2025_robot_description/resource/xmacro/: pb2025_sentry_robot.sdf.xmacro
src/perception/modify_map_to_odom/: CMakeLists.txt  package.xml
src/perception/modify_map_to_odom/include/modify_map_to_odom/: modify_map_to_odom.hpp
src/perception/modify_map_to_odom/src/: modify_map_to_odom.cpp
src/perception/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
src/referee_system/referee_pub/: CMakeLists.txt  package.xml
src/referee_system/referee_pub/include/referee_pub/: referee_publisher.h
src/referee_system/referee_pub/scripts/: referee_sub.py
src/referee_system/referee_pub/src/: referee_publisher.cpp
src/rmoss_gazebo/rmoss_gz_base/include/rmoss_gz_base/: odometry_publisher.hpp
src/rmoss_gazebo/rmoss_gz_base/scripts/: test_gimbal_cmd.py
src/rmoss_gazebo/rmoss_gz_base/src/: chassis_controller.cpp  gimbal_controller.cpp  odometry_publisher.cpp  rmua19_robot_base_node.cpp
src/rmoss_gazebo/rmoss_gz_cam/launch/: gz_cam.launch.py
src/rmoss_gazebo/rmoss_gz_plugins/plugins/mecanum_drive2/: MecanumDrive2.cc
src/rmoss_gz_resources/resource/models/rmua19_standard_robot/: model.sdf  model.sdf.xmacro  rmua19_standard_robot.def.xmacro
src/rmu_gazebo_simulator/: package.xml
src/rmu_gazebo_simulator/config/: base_params.yaml  gz_world.yaml  ros_gz_bridge.yaml
src/rmu_gazebo_simulator/launch/: bringup_sim.launch.py  gazebo.launch.py  rviz.launch.py  spawn_robots.launch.py
src/rmu_gazebo_simulator/resource/ign/: gui.config
